--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4"
-serde = { version = "1.0", features = ["derive"] }
+actix-web = "^4"
+serde = { version = "^1.0", features = ["derive"] }
 log = "^0"
 log4rs = "^1"
